--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<section id="about">
             <div class = "grid ">
                 <div class ="col pho">
-                    <div class ="photo"><img  src="slika2.jpg" width="600" height="450"></div> 
+                    <div class ="photo"><img  src="slika2.jpg" width="800" height="550"></div> 
                 </div>
                 <div class ="col txt">
                     <h2> About us</h2>
@@ -36,13 +36,14 @@
                 <div class ="col txt">
                     <h2> Lorem Ipsum</h2>
                     <p> Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae </p>
-                    <button onclick="location.href='dist/index.html'"> vise</button>
+                    <a href='dist/index.html' class="btn"> Procitaj vise o ponudi </a>
+                    
                 </div>
                 <div class ="col pho">
-                    <img src="11.jpg"  width="600" height="450">
+                    <img src="11.jpg"  width="800" height="550">
                 </div>
                 <div class ="col pho">
-                    <img src="33.jpg"  width="600" height="450">
+                    <img src="33.jpg"  width="800" height=550">
                 </div>
                 <div class ="col txt">
                     <h2> Lorem Ipsum</h2>
