--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class ="col txt">
                     <h2> About us</h2>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
-                    <a href='' class="btn"> Procitaj vise o ponudi </a>
+                    <a href='/aboutUs/aboutUs.html' class="btn"> About Us </a>
                     
                 </div>
                 <div class ="col txt">
