--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -9,35 +9,30 @@
     </head>
     <body>
  
-    <header class = "header">
-        <a href="../index.html" class="back"></a>
-        <h1>TEROAR</h1>
+        <header class="header">
+            <h2 class="logo">TEROAR</h2>
+            <div class="toggle"></div>
         </header>
     <div class="about-us">
-        <h1>About Us</h1>
+        <h1>O NAMA</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
+            Skoro jednu celu deceniju, bračni par Jelena I Petar Mirkovic su posebno zadovoljstvo u životu nalazili u vinima, vinskim pričama, obilascima I upoznavanjima vinograda, vinskih regija, vinara I vinskih kultura. Vremenom se rodila ideja da zajedno kao partneri, iako svako ima svoj posao I profesiju, jedan deo svog života posvete vinskoj kulturi I vinarstvu. Obzirom da se radi o pravnici I ekonomisti, sadnja vinograda je bila prevelik zalogaj ali trgovina I širenje vinske kulture kroz posao sa vinima je bilo baš po njihovoj meri.
+      </p>
+        <p>
+            Sa druge strane, u poplavi vinskih etiketa, stručnjaka I zbunjujućih izraza tipa “veoma kompleksno telo sa izraženim kiselinama, dugom somotskom završnicom I naglašenim notama marakuje I djumbira” shvatili su da je vino za veliki broj ljudi veoma zbunjujuća stvar koja čak izaziva I odbojnost.
+       </p>
+        <p>
+            Shvatili su, misija je približiti vino što širem broju ljudi na što lakši I jednostavniji način !
         </p>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-        </p>
-        <p>
-           
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ea voluptatibus facilis quasi, et quibusdam quidem quae odit voluptates, repellendus maxime eum magnam nobis eligendi commodi. Saepe modi quam dolorem!
-        </p>
+            Iz medjusobne ljubavi I ljubavi prema vinu, rodio se partnerski projekat koji za cilj ima da vino donese u što je više domova ali bez zbunjivanja. Odlucili su da to rade pričanjem priča I deljenjem informacija  ne samo o ukusu I mirisu vina, već I o predelima I regijama odakle vino dolazi, zemljištu iz kog se radja, vinogradarimama koji ga prave. Da o svakoj boci koju prodaju imaju reći bar nekoliko rečenica u formi priče. Tako je rodjen projekat TEROAR koji ce 2021 postati I prva vinoteka u Šapcu.
+    </p>
+      
         <a href="#about" class="btn">Read More</a>
 			
 
 
-
+ 
 
     </div>
     <footer class="footer">
