--- a/gal/index.html
+++ b/gal/index.html
@@ -106,8 +106,8 @@
 <div class="menu">
     <ul class="chr">
         <li><a   href='../index.html'>Home</a></li>
-        <li><a   href="#about">News</a></li>
-        <li><a  href='gal/index.html'>Garerija</a></li>
+        <li><a   href="../aboutUs/aboutUs.html">News</a></li>
+        <li><a  href='index.html'>Garerija</a></li>
         <li><a   href="#">Blog</a></li>
         <li><a  href="#">Contact</a></li>
     </ul>
