--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -70,7 +70,7 @@
         <ul class="chr">
             <li><a   href='../index.html'>Home</a></li>
             <li><a   href="aboutUs.html">News</a></li>
-            <li><a  href='../aboutUs/aboutUs.html'>Garerija</a></li>
+            <li><a  href='../gal/index.html'>Garerija</a></li>
             <li><a   href="#">Blog</a></li>
             <li><a  href="#">Contact</a></li>
         </ul>
