nuic proba za fon

--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -96,11 +96,12 @@
 
     <div class="menu">
         <ul class="chr">
-            <li><a   href='../index.html'>Home</a></li>
-            <li><a   href="aboutUs.html">News</a></li>
+            <li><a   href='../index.html'>Počenta</a></li>
+            <li><a   href="aboutUs.html">O nama</a></li>
             <li><a  href='../gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Blog</a></li>
-            <li><a  href="#">Contact</a></li>
+            <li><a   href="#">Vinogradi Nujić</a></li>
+            <li><a  href="#">Vinogradi Enjingi</a></li>
+            <li><a  href="#">Kontakt</a></li>
         </ul>
     </div>
 
