--- a/gal/index.html
+++ b/gal/index.html
@@ -105,11 +105,13 @@
 
 <div class="menu">
     <ul class="chr">
-        <li><a   href='../index.html'>Home</a></li>
-        <li><a   href="../aboutUs/aboutUs.html">News</a></li>
+        <li><a   href='../index.html'>Početna</a></li>
+        <li><a   href="../aboutUs/aboutUs.html">O nama</a></li>
         <li><a  href='index.html'>Garerija</a></li>
-        <li><a   href="#">Blog</a></li>
-        <li><a  href="#">Contact</a></li>
+        <li><a   href="#">Vinogradi Nujić</a></li>
+        <li><a  href="#">Vinogradi Enjingi</a></li>
+        <li><a  href="#">Kontakt</a></li>
+        
     </ul>
 </div>
 
