--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
            
     <div class="menu">
         <ul class="chr">
-            <li><a   href='index.html'>Home</a></li>
-            <li><a   href="aboutUs/aboutUs.html">News</a></li>
+            <li><a   href='index.html'>Početna</a></li>
+            <li><a   href="aboutUs/aboutUs.html">O nama</a></li>
             <li><a  href='gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Blog</a></li>
-            <li><a  href="#">Contact</a></li>
+            <li><a   href="nujic/nujicPage.html">Vinogradi Nujić</a></li>
+            <li><a  href="#">Vinogradi Enjingi</a></li>
+            <li><a  href="#">Kontakt</a></li>
         </ul>
     </div>
     
