--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -94,16 +94,16 @@
         </div>
    </footer>
 
-    <div class="menu">
-        <ul class="chr">
-            <li><a   href='../index.html'>Počenta</a></li>
-            <li><a   href="aboutUs.html">O nama</a></li>
-            <li><a  href='../gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Vinogradi Nujić</a></li>
-            <li><a  href="#">Vinogradi Enjingi</a></li>
-            <li><a  href="#">Kontakt</a></li>
-        </ul>
-    </div>
+   <div class="menu">
+    <ul class="chr">
+        <li><a   href='../index.html'>Početna</a></li>
+        <li><a   href="aboutUs.html">O nama</a></li>
+        <li><a  href='../gal/index.html'>Garerija</a></li>
+        <li><a   href="../nujic/nujicPage.html">Vinogradi Nujić</a></li>
+        <li><a  href="../enjingi/enjingi.html">Vinogradi Enjingi</a></li>
+        <li><a  href="../kontakt/kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
 
     <script>
         const menuToggle = document.querySelector('.toggle');
