--- a/enjingi/enjingi.html
+++ b/enjingi/enjingi.html
@@ -15,7 +15,7 @@
         </header>
     <div class="nuic-page">
         <div id="cont">
-            <h1>Vinogradi NUIĆ</h1><br><br>
+            <h1>Vinogradi ENJINGI</h1><br><br>
             <div id="josip">
                 <h3>O IVANU ENJININGI</h3>
                 <p>Ako bismo tražili osobu koja na najbolji način predstavlja autentičnost hrvatskog vinarstva, onda bi to sigurno bio “maestro” Ivan Enjingi iz Hrnjevca kod Kutjeva. Vinar kroz čije je ruke prošlo više od 50 berbi. Vinar koji pokazuje da sva ta enološka sredstva, selekcionisani kvasci, pojačivači aroma, itd ubijaju autentičnost i kreiraju uniformna vina. Vinar koji je inovator kako u vinogradu tako i u podrumu. Vinar koji sa 79 godina nosi energiju i entuzijazam  mladića.</p>
@@ -217,15 +217,16 @@
         </div>
    </footer>
 
-    <div class="menu">
-        <ul class="chr">
-            <li><a   href='../index.html'>Home</a></li>
-            <li><a   href="#about">News</a></li>
-            <li><a  href='gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Blog</a></li>
-            <li><a  href="#">Contact</a></li>
-        </ul>
-    </div>
+   <div class="menu">
+    <ul class="chr">
+        <li><a   href='../index.html'>Početna</a></li>
+        <li><a   href="../aboutUs/aboutUs.html">O nama</a></li>
+        <li><a  href='../gal/index.html'>Garerija</a></li>
+        <li><a   href="../nujic/nujicPage.html">Vinogradi Nujić</a></li>
+        <li><a  href="enjingi.html">Vinogradi Enjingi</a></li>
+        <li><a  href="../kontakt/kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
 
     <script>
         const menuToggle = document.querySelector('.toggle');
