--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<section class ="nako" id="about">
             <div class = "grid ">
                 <div class ="col pho">
-                    <div class ="photo"><img  src="teroarSlika.png" width="800" height="550"></div> 
+                    <div class ="photo"><img  src="pocetnaMi.png" width="800" height="550"></div> 
                 </div>
                 <div class ="col txt">
                     <h2> O nama</h2>
