--- a/gal/index.html
+++ b/gal/index.html
@@ -102,16 +102,14 @@
 
 
 
-
 <div class="menu">
     <ul class="chr">
         <li><a   href='../index.html'>Početna</a></li>
         <li><a   href="../aboutUs/aboutUs.html">O nama</a></li>
         <li><a  href='index.html'>Garerija</a></li>
-        <li><a   href="#">Vinogradi Nujić</a></li>
-        <li><a  href="#">Vinogradi Enjingi</a></li>
-        <li><a  href="#">Kontakt</a></li>
-        
+        <li><a   href="../nujic/nujicPage.html">Vinogradi Nujić</a></li>
+        <li><a  href="../enjingi/enjingi.html">Vinogradi Enjingi</a></li>
+        <li><a  href="../kontakt/kontakt.html">Kontakt</a></li>
     </ul>
 </div>
 
