--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -14,6 +14,23 @@
             <div class="toggle"></div>
         </header>
     <div class="about-us">
+        
+            <div>
+                <h4>KONTAKT</h4>
+            <div id="kont">
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=masarikova%203/3%20sabac&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">adding google maps to wordpress</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            <div class="infoTeroar">
+                <p>Adresa: Masarikova 3/3, Šabac 15000</p><br>
+                <p>Radno vreme: ponedelja-petak 08:00-20:00<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;subota  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       08:00-14:00</p>
+                <br><p>Telefon: 063/77-29-364</p><br>
+                <p>e-mail: petar.mirkovic@inovasmart.rs</p>
+            </div>
+            </div>
+
+        </div>
+
+        
   
 
  
@@ -63,15 +80,16 @@
         </div>
    </footer>
 
-    <div class="menu">
-        <ul class="chr">
-            <li><a   href='../index.html'>Home</a></li>
-            <li><a   href="#about">News</a></li>
-            <li><a  href='gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Blog</a></li>
-            <li><a  href="#">Contact</a></li>
-        </ul>
-    </div>
+   <div class="menu">
+    <ul class="chr">
+        <li><a   href='../index.html'>Početna</a></li>
+        <li><a   href="../aboutUs/aboutUs.html">O nama</a></li>
+        <li><a  href='../gal/index.html'>Garerija</a></li>
+        <li><a   href="../nujic/nujicPage.html">Vinogradi Nujić</a></li>
+        <li><a  href="../enjingi/enjingi.html">Vinogradi Enjingi</a></li>
+        <li><a  href="kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
 
     <script>
         const menuToggle = document.querySelector('.toggle');
