--- a/nujic/nujicPage.html
+++ b/nujic/nujicPage.html
@@ -239,15 +239,16 @@
         </div>
    </footer>
 
-    <div class="menu">
-        <ul class="chr">
-            <li><a   href='../index.html'>Home</a></li>
-            <li><a   href="#about">News</a></li>
-            <li><a  href='gal/index.html'>Garerija</a></li>
-            <li><a   href="#">Blog</a></li>
-            <li><a  href="#">Contact</a></li>
-        </ul>
-    </div>
+   <div class="menu">
+    <ul class="chr">
+        <li><a   href='../index.html'>Početna</a></li>
+        <li><a   href="../aboutUs/aboutUs.html">O nama</a></li>
+        <li><a  href='../gal/index.html'>Garerija</a></li>
+        <li><a   href="nujicPage.html">Vinogradi Nujić</a></li>
+        <li><a  href="../enjingi/enjingi.html">Vinogradi Enjingi</a></li>
+        <li><a  href="../kontakt/kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
 
     <script>
         const menuToggle = document.querySelector('.toggle');
