gotovo samo jos txt

--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -43,7 +43,7 @@
                 </div>
             
             </div>
-            <div id="photo-fam"><img src="../famPH.png" ></div>
+            <div id="photo-fam"><img src="../boki.png" ></div>
             
         </div>
 
