--- a/gal/index.html
+++ b/gal/index.html
@@ -16,6 +16,7 @@
   </header>
 <!-- partial:index.partial.html -->
 <div class="grid">
+
  <div class="grid-inner">
   <div class="item">
    <div class="item-inner"></div>
@@ -56,47 +57,46 @@
  </div>
 </div>
 <footer class="footer">
-  <div class="container">
-      <div class="row">
-          <div class="footer-col">
-              <h4>company</h4>
-              <ul>
-                  <li><a href="#">about us</a></li>
-                  <li><a href="#">our services</a></li>
-                  <li><a href="#">privacy policy</a></li>
-                  <li><a href="#">affiliate program</a></li>
-              </ul>
-          </div>
-          <div class="footer-col">
-              <h4>get help</h4>
-              <ul>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">shipping</a></li>
-                  <li><a href="#">returns</a></li>
-                  <li><a href="#">order status</a></li>
-                  <li><a href="#">payment options</a></li>
-              </ul>
-          </div>
-          <div class="footer-col">
-              <h4>online shop</h4>
-              <ul>
-                  <li><a href="#">wine</a></li>
-                  <li><a href="#">liqueurs</a></li>
-                  <li><a href="#">accessories</a></li>
-                  <li><a href="#">packaging</a></li>
-              </ul>
-          </div>
-          <div class="footer-col">
-              <h4>follow us</h4>
-              <div class="social-links">
-                  <a href="https://www.facebook.com/Teroar.rs"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.instagram.com/teroar.rs"><i class="fab fa-instagram"></i></a>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>company</h4>
+                <ul>
+                    <li><a href="../aboutUs/aboutUs.html">O nama</a></li>
+                    <li><a href="../nujic/nujicPage.html">Vinarija Nujic</a></li>
+                    <li><a href="../enjingi/enjingi.html">Vinarija Enjingi</a></li>
+                     
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="../kontakt/kontakt.html">Kontakt</a></li>
+                    <li><a href="index.html">Galerija</a></li>
+                    <li><a href="../index.html">Počtna</a></li>
+                 
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">wine</a></li>
+                    <li><a href="#">liqueurs</a></li>
+                    <li><a href="#">accessories</a></li>
+                    <li><a href="#">packaging</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/Teroar.rs"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/teroar.rs"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 <!-- partial -->
 
