--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -56,20 +56,19 @@
                 <div class="footer-col">
                     <h4>company</h4>
                     <ul>
-                        <li><a href="#">about us</a></li>
-                        <li><a href="#">our services</a></li>
-                        <li><a href="#">privacy policy</a></li>
-                        <li><a href="#">affiliate program</a></li>
+                        <li><a href="aboutUs.html">O nama</a></li>
+                        <li><a href="../nujic/nujicPage.html">Vinarija Nujic</a></li>
+                        <li><a href="../enjingi/enjingi.html">Vinarija Enjingi</a></li>
+                         
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>get help</h4>
                     <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">shipping</a></li>
-                        <li><a href="#">returns</a></li>
-                        <li><a href="#">order status</a></li>
-                        <li><a href="#">payment options</a></li>
+                        <li><a href="../kontakt/kontakt.html">Kontakt</a></li>
+                        <li><a href="../gal/index.html">Galerija</a></li>
+                        <li><a href="../index.html">Počtna</a></li>
+                     
                     </ul>
                 </div>
                 <div class="footer-col">
