--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href ="#" class="logo"><img src="logo.jpg"></a>
+        <a href ="index.html" class="logo"><img src="logo.jpg"></a>
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar">Menu</label> 
         <nav class="navbar"> 
